Fix the check to also handle 0 doc views

BUG: 448847